<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">

             <ImageView
                 android:id="@+id/back_icon"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_back"
                 tools:ignore="ContentDescription" />


             <TextView
                 android:id="@+id/form_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="80dp"
                 android:text="@string/form_title"
                 android:textSize="28sp"
                 android:textStyle="bold" />

         </RelativeLayout>




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_your_name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:padding="16dp"
            android:inputType="text"
            android:minWidth="150dp"
            android:importantForAutofill="yes"
            android:autofillHints="name"
            tools:ignore="VisualLintTextFieldSize"
            android:layout_marginBottom="40dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_your_age"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:padding="16dp"
            android:inputType="number"
            android:minWidth="150dp"
            android:importantForAutofill="yes"
            android:autofillHints="age"
            android:layout_marginBottom="40dp"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_gender"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/input_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />

        </RadioGroup>

        <Button
            android:id="@+id/submit"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/submit"
            android:layout_gravity="center_horizontal"
            tools:ignore="VisualLintButtonSize" />



    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>