<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/result"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/back_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_back"
                tools:ignore="ContentDescription" />


            <TextView
                android:id="@+id/form_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="80dp"
                android:text="@string/result"
                android:textSize="28sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/name_result"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/value"
                    android:textSize="20sp"
                    android:layout_marginEnd="10dp"/>

                <TextView
                    android:id="@+id/name_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/age_result"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/value"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/age_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/gender_result"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/value"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/gender_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:textSize="20sp" />

            </TableRow>

        </TableLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>